add jwt token for auth and fix send aes key method